--- a/bi-zipper.cabal
+++ b/bi-zipper.cabal
@@ -1,4 +1,3 @@
-
 name:                bi-zipper
 version:             0.1.0.0
 synopsis:            Simple bidirectional zipper from any Traversable.
@@ -10,14 +9,18 @@ category:            Data
 build-type:          Simple
 cabal-version:       >=1.8
 stability:           Experimental
+description:
+    Generic zippers with forward and backward movement from any Traversable.
+    It is a minor extension to Oleg Kiselyov's zipper creation scheme described here: <http://okmij.org/ftp/continuations/zipper.html#traversable>
 
+
+Source-Repository head
+    Type: git
+    Location: https://github.com/AndrasKovacs/bi-zipper
 
 library
-    hs-source-dirs:     src
     exposed-modules:    Data.Traversable.BiZipper, Control.Monad.BiZipper
-    build-depends:      base ==4.6.*, mtl ==2.1.*, transformers ==0.3.*
-    ghc-options:        -O2
-  
+    build-depends:      base ==4.6.*, mtl == 2.1.*, transformers ==0.3.*
 
 test-suite test
     main-is:            Tests.hs
